# sigma-proofs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  clippy.toml  release-plz.toml  rust-toolchain  rust-toolchain.toml
benches/: dleq.rs  dleq_benches.rs  msm.rs  zkp.rs
examples/: 01_schnorr.rs  02_simple_composition.rs  composition.rs  new_composition.rs  schnorr.rs  simple_composition.rs  update_vectors.rs
hash2group/: Cargo.toml
hash2group/src/: curve25519.rs  k256.rs  lib.rs  p256.rs  rfc9380.rs
hash2group/tests/: rfc9380_expand.rs  rfc9380_hash2curve_k256.rs  rfc9380_hash2curve_p256.rs
src/: codec.rs  composition.rs  compressed.rs  csrng.rs  errors.rs  fiat_shamir.rs  group_morphism.rs  group_serialisation.rs  group_serialization.rs  lib.rs  linear_relation.rs  macros.rs  prng.rs  proof_builder.rs  proof_composition.rs  protocol.rs  rng.rs  schnorr_proof.rs  schnorr_protocol.rs  serialisation.rs  serialization.rs  test_utils.rs  trait.rs  traits.rs
tests/: composition_protocol.rs  create_test_vectors.rs  dleq_using_constraint_api.rs  dudect.rs  fiat_shamir.rs  instance_validation.rs  interactive_codec.rs  morphism_preimage.rs  morphism_test.rs  non_interactive_protocol.rs  proof_builder.rs  proof_builder_test.rs  proof_composition.rs  proof_composition_test.rs  sage_proofs.rs  sage_test_vectors.rs  schnorr_preimage_proof.rs  sig_and_vrf_example.rs  spec_duplex_sponge.rs  spec_tests.rs  spec_vectors.rs  test_batch_verification.rs  test_composition.rs  test_relations.rs  test_sponge.rs  test_validation_criteria.rs  test_vectors.rs  (+5 more)
(+119 files in other folders)
